--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,16 @@
             <artifactId>selenium-java</artifactId>
             <version>4.0.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+            <version>1.7.25</version>
+        </dependency>
+
+
+
+
+
     </dependencies>
 
     <properties>
